Ansible/ACMKube/roles/prod/files/Kubernetes/gitlab/gitlab-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab-dashboard
  namespace: gitlab
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: git.acm.cs
    http:
      paths:
      - backend:
          service:
            name: gitlab-service-http
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - git.acm.cs
    secretName: gitlab-ui-tls-cert
